--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 </div>
             </div>
             <div class="icon_div">
-                <a href="https://github.com/ThanujaRandima"><img src="/images/github.png" alt="git-hub" class="i_icon git_hub"></a>
-                <a href="mailto:thanujaeuw@gmail.com"><img src="/images/email.png" alt="email" class="i_icon"></a>
+                <a href="https://github.com/ThanujaRandima"><img src="./images/github.png" alt="git-hub" class="i_icon git_hub"></a>
+                <a href="mailto:thanujaeuw@gmail.com"><img src="./images/email.png" alt="email" class="i_icon"></a>
             </div>
     </section>
     <div class="toolbox" id="toolbox">
@@ -70,51 +70,51 @@
         <p class="toolbox_p">The skills, tools and technologies I <span class="nowrap">use <span class="star">*</span></span> </p>
         <div class="icon_collection_div">
             <div class="icon_box">
-                <img src="/images/html.svg" alt="html_thumb" class="tool_img">
+                <img src="./images/html.svg" alt="html_thumb" class="tool_img">
                 <p class="tool_name">HTML5</p>
             </div>
             <div class="icon_box">
-                <img src="/images/css.svg" alt="css_thumb" class="tool_img">
+                <img src="./images/css.svg" alt="css_thumb" class="tool_img">
                 <p class="tool_name">CSS3</p>
             </div>
             <div class="icon_box">
-                <img src="/images/js.svg" alt="js_thumb" class="tool_img">
+                <img src="./images/js.svg" alt="js_thumb" class="tool_img">
                 <p class="tool_name">Javascript</p>
             </div>
             <div class="icon_box">
-                <img src="/images/git_hub.svg" alt="github_thumb" class="tool_img">
+                <img src="./images/git_hub.svg" alt="github_thumb" class="tool_img">
                 <p class="tool_name">Github</p>
             </div>
             <div class="icon_box">
-                <img src="/images/git.svg" alt="git_thumb" class="tool_img">
+                <img src="./images/git.svg" alt="git_thumb" class="tool_img">
                 <p class="tool_name">GIT</p>
             </div>
             <div class="icon_box">
-                <img src="/images/sass.svg" alt="sass_thumb" class="tool_img">
+                <img src="./images/sass.svg" alt="sass_thumb" class="tool_img">
                 <p class="tool_name">SASS</p>
             </div>
             <div class="icon_box">
-                <img src="/images/wordpress.svg" alt="wordpress_thumb" class="tool_img">
+                <img src="./images/wordpress.svg" alt="wordpress_thumb" class="tool_img">
                 <p class="tool_name">WordPress</p>
             </div>
             <div class="icon_box">
-                <img src="/images/vscode.svg" alt="vscode_thumb" class="tool_img">
+                <img src="./images/vscode.svg" alt="vscode_thumb" class="tool_img">
                 <p class="tool_name">Visual Studio<br>Code</p>
             </div>
             <div class="icon_box">
-                <img src="/images/responsive.png" alt="responsive_thumb" class="tool_img">
+                <img src="./images/responsive.png" alt="responsive_thumb" class="tool_img">
                 <p class="tool_name">Responsive <br>Design</p>
             </div>
             <div class="icon_box">
-                <img src="/images/w3c.svg" alt="w3c_thumb" class="tool_img">
+                <img src="./images/w3c.svg" alt="w3c_thumb" class="tool_img">
                 <p class="tool_name">Web <br>Accessibility</p>
             </div>
             <div class="icon_box">
-                <img src="/images/seo.png" alt="seo_thumb" class="tool_img">
+                <img src="./images/seo.png" alt="seo_thumb" class="tool_img">
                 <p class="tool_name">Search Engine <br> Optimization</p>
             </div>
             <div class="icon_box">
-                <img src="/images/chromedev.svg" alt="seo_thumb" class="tool_img">
+                <img src="./images/chromedev.svg" alt="seo_thumb" class="tool_img">
                 <p class="tool_name">Chrome Dev <br> Tools</p>
             </div>
         </div>
@@ -133,7 +133,7 @@
                     <p class="project_p">Refy is a home schooling web site that created for students who wants to continue their education from home. It enables students to access video tutorials, PDFs and more self learning contents. Main objective of Refy is to promote distance learning and creating a safe e-learning platform for students. </p>
                 </div>
                 <div class="spin_animation">
-                    <img src="/images/react.svg" alt="spin_img" class="spin_img">
+                    <img src="./images/react.svg" alt="spin_img" class="spin_img">
                 </div>
                 <div class="project_details">
                     <div class="details_div">
@@ -155,10 +155,10 @@
                     </div>
                 </div>
                 <div class="mockup_div">
-                    <img src="/images/refy_web.png" alt="refy-home" class="mockup_img" loading="lazy">
+                    <img src="./images/refy_web.png" alt="refy-home" class="mockup_img" loading="lazy">
                 </div>
                 <div class="mobile_img_div">
-                    <img src="/images/refy_mobile.png" alt="refy-home-mobile">
+                    <img src="./images/refy_mobile.png" alt="refy-home-mobile">
                 </div>
             </div>
              <!-- move-->
@@ -168,7 +168,7 @@
                     <p class="project_p">moo-ve is a work culture management firm that hepls organizations transform their cultures by enabling teams to adopt and activate new behaviours through play. </p>
                 </div>
                 <div class="spin_animation">
-                    <img src="/images/react.svg" alt="spin_img" class="spin_img">
+                    <img src="./images/react.svg" alt="spin_img" class="spin_img">
                 </div>
                 <div class="project_details">
                     <div class="details_div">
@@ -189,10 +189,10 @@
                     </div>
                 </div>
                 <div class="mockup_div">
-                    <img src="/images/move_web.png" alt="" class="mockup_img" loading="lazy">
+                    <img src="./images/move_web.png" alt="" class="mockup_img" loading="lazy">
                 </div>
                 <div class="mobile_img_div">
-                    <img src="/images/move_mobile.png" alt="move-home-mobile">
+                    <img src="./images/move_mobile.png" alt="move-home-mobile">
                 </div>
             </div>
              <!-- fig -->
@@ -202,7 +202,7 @@
                     <p class="project_p">-fig is an e-learning platform that provides professional resources in areas ranging from branding, design, product design, digital marketing,social media , UI/UX etc. You can subscribe with a monthly plan to access podcasts, webcasts and other useful materials.</p>
                 </div>
                 <div class="spin_animation">
-                    <img src="/images/react.svg" alt="spin_img" class="spin_img">
+                    <img src="./images/react.svg" alt="spin_img" class="spin_img">
                 </div>
                 <div class="project_details">
                     <div class="details_div">
@@ -224,10 +224,10 @@
                     </div>
                 </div>
                 <div class="mockup_div">
-                    <img src="/images/fig_web.png" alt="" class="mockup_img" loading="lazy">
+                    <img src="./images/fig_web.png" alt="" class="mockup_img" loading="lazy">
                 </div>
                 <div class="mobile_img_div">
-                    <img src="/images/fig_mobile.png" alt="fig-home-mobile">
+                    <img src="./images/fig_mobile.png" alt="fig-home-mobile">
                 </div>
             </div>
             <!-- bonita -->
@@ -237,7 +237,7 @@
                     <p class="project_p">Bonita brings possibilities to life through the power of beauty each and every day. Bonita is the premium destination for cosmetics, body, skin and hair care.</p>
                 </div>
                 <div class="spin_animation">
-                    <img src="/images/react.svg" alt="spin_img" class="spin_img">
+                    <img src="./images/react.svg" alt="spin_img" class="spin_img">
                 </div>
                 <div class="project_details">
                     <div class="details_div">
@@ -260,10 +260,10 @@
                     </div>
                 </div>
                 <div class="mockup_div">
-                    <img src="/images/bonita_web.png" alt="" class="mockup_img" loading="lazy">
+                    <img src="./images/bonita_web.png" alt="" class="mockup_img" loading="lazy">
                 </div>
                 <div class="mobile_img_div">
-                    <img src="/images/bonita_mobile.png" alt="bonita-home-mobile">
+                    <img src="./images/bonita_mobile.png" alt="bonita-home-mobile">
                 </div>
             </div>
         </div>
@@ -279,7 +279,7 @@
         <h2 class="contact_head">Contact me</h2>
         <p class="contact_mail"><a href="mailto:thanujaeuw@gmail.com" class="mail_link">thanujaeuw@gmail.com</a></p></div>
         <figure>
-            <img src="/images/coffee_cup.webp" alt="coffee-cup" class="contact_img" loading="lazy">
+            <img src="./images/coffee_cup.webp" alt="coffee-cup" class="contact_img" loading="lazy">
         </figure>
      </section>
      <div class="footer__div">
@@ -297,8 +297,8 @@
         <div class="foot__div foot__icons">
             <p>Get in touch</p>
             <div class="icon__flex">
-               <a href="https://github.com/ThanujaRandima"> <img src="/images/git__foot.svg" alt="Git-hub-icon" class="f__icon"></a>
-               <a href="mailto:thanujaeuw@gmail.com"><img src="/images/foot_mail_5.png" alt="mail-icon" class="f__icon_mail"></a>
+               <a href="https://github.com/ThanujaRandima"> <img src="./images/git__foot.svg" alt="Git-hub-icon" class="f__icon"></a>
+               <a href="mailto:thanujaeuw@gmail.com"><img src="./images/foot_mail_5.png" alt="mail-icon" class="f__icon_mail"></a>
             </div>
         </div>
      </div>
