about html link added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="nav__div">
                 <div class="nav__div_item">
                     <p class="nav__div_p">
-                        <a href="/about.html" class="nav__link">about</a>
+                        <a href="portfolio/about.html" class="nav__link">about</a>
                     </p>
                 </div>
                 <div class="nav__div_item">
