--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
      </section>
      <div class="footer__div">
         <div class="foot__div foot__name">
-            <p class="f__name"><a href="/about.html" class="f_name_link">Thanuja<br>Randima</a></p>
+            <p class="f__name"><a href="/portfolio/about.html" class="f_name_link">Thanuja<br>Randima</a></p>
         </div>
         <div class="foot__div foot__links">
             <p>Links</p>
