--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="nav__div">
                 <div class="nav__div_item">
                     <p class="nav__div_p">
-                        <a href="/about.html" class="nav__link">about</a>
+                        <a href="/portfolio/about.html" class="nav__link">about</a>
                     </p>
                 </div>
                 <div class="nav__div_item">
@@ -289,7 +289,7 @@
         <div class="foot__div foot__links">
             <p>Links</p>
             <div class="link__grid">
-                <p class="link__p"><a href="/about.html" class="link__port">About</a></p>
+                <p class="link__p"><a href="/portfolio/about.html" class="link__port">About</a></p>
                 <p class="link__p"><a href="#projects" class="link__port">Projects</a></p>
                 <p class="link__p"><a href="mailto:thanujaeuw@gmail.com" class="link__port">Contact</a></p>
             </div>
