--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="nav__div">
                 <div class="nav__div_item">
                     <p class="nav__div_p">
-                        <a href="/portfolio/about.html" class="nav__link">about</a>
+                        <a href="about.html" class="nav__link">about</a>
                     </p>
                 </div>
                 <div class="nav__div_item">
@@ -284,7 +284,7 @@
      </section>
      <div class="footer__div">
         <div class="foot__div foot__name">
-            <p class="f__name"><a href="/portfolio/about.html" class="f_name_link">Thanuja<br>Randima</a></p>
+            <p class="f__name"><a href="about.html" class="f_name_link">Thanuja<br>Randima</a></p>
         </div>
         <div class="foot__div foot__links">
             <p>Links</p>
