--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <p class="info_p_head">Currently Working On :</p>
         <p class="info_p_text">Hi! i'm Thanuja. i have a strong passion for exploring and learning new things. I Love to play with code & create colourful pixels with it . feel free to read my quick story :) </p>
         <p class="info_p_text">Currently i'm improving my knowladge in Javascript and React. Also started <span class="bold">#100daysOfCode</span> challenge to improve the knowladge in Typescript & SASS and looking forward to dig Back-End Technologies deeper.  </p>
-        <p class="info_link_p"><a href="/about.html" class="info_link">My Quick Story</a> <span class="read">(2 min read)</span></p>
+        <p class="info_link_p"><a href="about.html" class="info_link">My Quick Story</a> <span class="read">(2 min read)</span></p>
     </div>
     <section id="projects" class="projects_section">
         <h2 class="project_head">Projects</h2>
