--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <p class="nav__div_p"><a href="index.html#projects" class="nav__link"> Projects</a></p>
             </div>
             <div class="nav__div_item">
-                <p class="nav__div_p"><a href="#" class="nav__link"> contact</a></p>
+                <p class="nav__div_p"><a href="index.html#contact" class="nav__link"> contact</a></p>
             </div>
         </div>
     </div>
