footer link updated

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
     <div class="foot__div foot__icons">
         <p>Get in touch</p>
         <div class="icon__flex">
-            <img src="./images/git__foot.svg" alt="Git-hub-icon" class="f__icon">
+           <a href="https://github.com/ThanujaRandima" > <img src="./images/git__foot.svg" alt="Git-hub-icon" class="f__icon"></a>
            <a href="mailto:thanujaeuw@gmail.com"><img src="./images/foot_mail_5.png" alt="mail-icon" class="f__icon_mail"></a>
         </div>
     </div>
