footer link updated

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 </main>
 <div class="footer__div">
     <div class="foot__div foot__name">
-        <p class="f__name"><a href="/about.html" class="f_name_link">Thanuja <br>Randima</a></p>
+        <p class="f__name"><a href="#" class="f_name_link">Thanuja <br>Randima</a></p>
     </div>
     <div class="foot__div foot__links">
         <p>Links</p>
