--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </div>
     <main class="main_sec">
     <div class="about">
-        <p>Looking for my <span class="cv_link"><a href="" class="source_links">CV</a></span>?</p>
+        <p>Looking for my <span class="cv_link"><a href="https://www.dropbox.com/s/jn858xuvjykdfc0/thanujaRandimaCV.pdf?dl=0" class="source_links">CV</a></span>?</p>
         <h2 class="about_head">My Quick Story</h2>
         <p>Hi im Thanuja Randima ! I am a self Taught-Developer.im 22. I always loved Coding and tech. I wanted to turn my interest into profession. So i began to learn it. First i had couple of problems ... like "how to start this?..","which language should i learn first ?", "where can i find a good source..?" etc. So i've watched videos, listened to podcasts and read blog posts to find answers. At that stage i had a little knowladge about HTML. So i decided to learn tech realated to Web Development. but again i had a problem .. frontend.. or backend... ? 🧐 i decided to master frontend before moving to backend. i started to learn HTML5, CSS3 and then Javascript(vanilla js) and it's ES6 features. Since then i haven't stopped learning and creating.</p>
         <p><a href="index.html#toolbox" class="source_links"> Technologies and Tools i use</a></p>
