--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
             </div>
         </div>
         <p class="info_p_head">Currently Working On :</p>
-        <p class="info_p_text">Hi! i'm Thanuja. i have a strong passion for exploring and learning new things. I Love to play with code & create colourful pixels with it . feel free to read my quick story :) </p>
-        <p class="info_p_text">Currently i'm improving my knowladge in Javascript and React. Also started <span class="bold">#100daysOfCode</span> challenge to improve the knowladge in Typescript & SASS and looking forward to dig Back-End Technologies deeper.  </p>
+        <p class="info_p_text">Hi! i'm Thanuja. i have a strong passion for exploring and learning new things. I Love to play with code & create colourful pixels with it .</p>
+        <p class="info_p_text">Hi! I'm Thanuja, a passionate coder who loves creating vibrant, functional designs.<br>
+I'm currently enhancing my skills in C++ and React JS, focusing on mastering object-oriented programming concepts while polishing my front-end development skills.</p>
         <p class="info_link_p"><a href="about.html" class="info_link">My Quick Story</a> <span class="read">(2 min read)</span></p>
     </div>
     <section id="projects" class="projects_section">
@@ -269,9 +270,7 @@
         </div>
         <div class="comment_div">
             <p class="comment_head">Thoughts:</p>
-            <p class="comment_p">I'm really caring about the user interface and User Experience when Designing a web page and its content. I want to increase the accessibility of the website using semantic HTML. it'll be good for people with various disabilities. I didn't add "Hamburger Menu" when designing the responsive layout because i implement less number of menu items. I wanted to give them a simple look. Some of them are inspired by the Dynamic Island in iphone 14 :).
-            All the above are static webpages . 
-            I've added names and photos of real world speakers and desginers and random names for the above websites. because i hate adding "Lorem ipsum" and wanted to give a real impression. Project purpose only.</p>
+            <p class="comment_p">I focus on user interface and user experience when designing web pages, prioritizing accessibility through semantic HTML to accommodate users with disabilities. For responsive layouts, I kept menus simple by limiting items, avoiding the need for a hamburger menu. To create a realistic impression, I used real-world names and photos instead of placeholder text like "Lorem ipsum." All projects are static web pages created for learning and experimentation.</p>
         </div>
     </section>
      <section id="contact" class="contact_section">
