--- a/about.html
+++ b/about.html
@@ -31,12 +31,12 @@
     <div class="about">
         <p>Looking for my <span class="cv_link"><a href="https://www.dropbox.com/s/jn858xuvjykdfc0/thanujaRandimaCV.pdf?dl=0" class="source_links">CV</a></span>?</p>
         <h2 class="about_head">My Quick Story</h2>
-        <p>Hi im Thanuja Randima ! I am a self Taught-Developer.im 22. I always loved Coding and tech. I wanted to turn my interest into profession. So i began to learn it. First i had couple of problems ... like "how to start this?..","which language should i learn first ?", "where can i find a good source..?" etc. So i've watched videos, listened to podcasts and read blog posts to find answers. At that stage i had a little knowladge about HTML. So i decided to learn tech realated to Web Development. but again i had a problem .. frontend.. or backend... ? 🧐 i decided to master frontend before moving to backend. i started to learn HTML5, CSS3 and then Javascript(vanilla js) and it's ES6 features. Since then i haven't stopped learning and creating.</p>
+        <p>Hi, I’m Thanuja Randima, a self-taught developer passionate about coding and technology. </p>
+        <p>When I first began, I faced challenges like “Where do I start?”, “Which language should I learn first?”, “What are the best resources?” Determined to find answers, I immersed myself in learning by watching videos, listening to podcasts, and reading blogs.</p>
+        <p>With a foundational understanding of HTML, I decided to specialize in Web Development. Choosing between Frontend and Backend, I focused on mastering frontend development first.</p>
+        <p>I started with HTML5, CSS3, and JavaScript (including ES6 features). Since then, I’ve been continually learning and building projects that expand my skills.</p>
+        <p>I’m driven by curiosity, creativity, and the desire to craft user-friendly web experiences. I’m excited to explore new tools, frameworks, and opportunities in the ever-evolving tech landscape.</p>
         <p><a href="index.html#toolbox" class="source_links"> Technologies and Tools i use</a></p>
-        <h2 class="about_head">100Days of Coding</h2>
-        <p>100 days of code is my personal challenge to commit to coding atleast 3 hours per day for 100 consecutive days. Main aim is to improve good coding habits and improve coding skills.</p>
-        <p>day1 - day 21 : Learn Bootstrap & Sass + small projects<br> day 22 - day 29 : Getting Feedbacks from communities about projects and learn basics of figma <br> day 30 - day 54 : Javascript & Typescript + small projects<br> day 55 - day 65 : Revision, Doing projects and Experimenting the code. <br> Day 65 - 82 : Learn React + Projects <br>Day 83 - 98 : Learn Python Fundamentals + Small Projects <br>Day 99 - 100 Reset challenge and Updating Portfolio  </p>
-        <p>During this challenge i hope to join with communities to get Feedbacks and i'll add all the projects in a specific github repository.  </p>
         <h2 class="about_head">What i've learned As a Developer</h2>
         <p>I pay close attention to readability of my code. I know skills related to programming languages, libraries, frameworks and other stacks are important in this field. But i've learned that  <span class="bold">Communicational Skills , Problem Solving Skills, Presentation skills and the way of Asking Questions</span> are also very crucial and game-changing.</p>
         <p>This field is getting updated day by day. So becoming a developer means never-ending learning 👻. </p>
